crates/nidus/tests/ui/validate_outside_route_method.rs
use nidus::prelude::*;

#[validate]
fn validated() {}

fn main() {}
